--- a/src/app/components/purchase/purchase.component.html
+++ b/src/app/components/purchase/purchase.component.html
@@ -34,7 +34,7 @@
             </button>
           </div>
         </div>
-        <!-- <div class="form-group">
+        <div class="form-group">
           <input 
             type="date" 
             formControlName="startDate" 
@@ -49,7 +49,7 @@
             class="form-control" 
             placeholder="End Date"
           >
-        </div> -->
+        </div>
         <div class="button-group">
           <button type="submit" class="btn btn-primary">
             <i class="fas fa-search"></i> Search
