--- a/src/app/components/auth/login/login.component.scss
+++ b/src/app/components/auth/login/login.component.scss
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #FDF5EC;
+  background-color: map-get($custom-primary, 50);
 
   .login-card {
     background: white;
@@ -42,7 +42,7 @@
       padding: 0.75rem;
       font-size: 1rem;
       margin-top: 1rem;
-      background-color: #dc3545;
+      background-color: map-get($custom-primary, 500);
       color: white;
 
       &:disabled {
