Enhance attendance detail component with employee and attendance records
- Redesigned attendance-detail.component.html to display employee information and attendance records in a structured layout.
- Implemented loading indicators and pagination for attendance records.
- Added functionality for selecting and deleting multiple attendance records with confirmation modal.
- Updated attendance-detail.component.scss for improved styling and responsiveness.
- Enhanced attendance service to support searching and deleting attendance records.
- Modified employee service to encrypt and store selected employee details for better data handling.

--- a/src/app/components/attendance/attendance-list/attendance-list.component.html
+++ b/src/app/components/attendance/attendance-list/attendance-list.component.html
@@ -24,13 +24,13 @@
     </div>
   
     <div class="action-buttons">
-      <button routerLink="/employee/create" class="btn btn-primary">
-        <i class="fas fa-plus"></i> Add Employee
+      <button routerLink="/attendance/create" class="btn btn-primary">
+        <i class="fas fa-plus"></i> Add Attendance
       </button>
     </div>
   
     <div class="employees-list card">
-      <h2>Employees</h2>
+      <h2>Attendance</h2>
       <div class="table-wrapper">
         <div class="table-container">
           <app-loader [show]="isLoading"></app-loader>
@@ -63,7 +63,7 @@
                   <td class="actions">
                     <button 
                       class="btn-icon view" 
-                      [routerLink]="['/attendance/details']"
+                      (click)="viewAttendanceDetails(employee.id)"
                       title="Employee Attendance details"
                     >
                       <i class="fas fa-eye"></i>
