--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,9 +1,9 @@
 <header class="header">
   <nav class="nav-container">
     <div class="nav-top">
-      <div class="logo">
+      <!-- <div class="logo">
         <span>Inventory System</span>
-      </div>
+      </div> -->
       
       <button class="mobile-menu-toggle" (click)="toggleMobileMenu()" *ngIf="isAuthenticated">
         <i class="fas" [class.fa-bars]="!isMobileMenuOpen" [class.fa-times]="isMobileMenuOpen"></i>
