Developed quotation page & update dashboard UI.

--- a/src/app/components/add-purchase/add-purchase.component.scss
+++ b/src/app/components/add-purchase/add-purchase.component.scss
@@ -240,6 +240,7 @@
   margin: 0 -1.5rem;
   padding: 0 1.5rem;
   overflow-x: auto;
+  min-height: 400px;
   -webkit-overflow-scrolling: touch;
 
   @media (max-width: 768px) {
