--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -17,7 +17,7 @@
       </form>
     </div>
   </div>
-  <button class="btn btn-primary" (click)="openCreateDialog()">
+  <button class="btn btn-primary mb-2" (click)="openCreateDialog()">
     <i class="fas fa-plus"></i> Create Category
   </button>
 
