--- a/src/app/components/customer/customer.component.html
+++ b/src/app/components/customer/customer.component.html
@@ -39,7 +39,7 @@
     </form>
   </div>
 
-  <button class="btn btn-primary add-customer-btn" (click)="openCustomerModal()">
+  <button class="btn btn-primary add-customer-btn mb-2" (click)="openCustomerModal()">
     <i class="fas fa-plus"></i> Add Customer
   </button>
 
