--- a/src/app/components/purchase/purchase.component.html
+++ b/src/app/components/purchase/purchase.component.html
@@ -61,7 +61,7 @@
       </div>
     </form>
   </div>
-    <button routerLink="/purchase/create" class="btn btn-primary">Add Purchase</button>
+    <button routerLink="/purchase/create" class="btn btn-primary mb-2">Add Purchase</button>
   <div class="purchases-list card">
     <h2>Purchases</h2>
 
