--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -35,6 +35,7 @@
             <li><a routerLink="/sale" routerLinkActive="active">Sale</a></li>
             <li><a routerLink="/profit" routerLinkActive="active">Product Wise Profit</a></li>
             <li><a routerLink="/daily-profit" routerLinkActive="active">Daily Profit</a></li>
+            <li><a routerLink="/quotation" routerLinkActive="active">Quotation</a></li>
           </ul>
         </li>
         
