--- a/src/app/components/powder-coating/powder-coating-process/powder-coating-process.component.html
+++ b/src/app/components/powder-coating/powder-coating-process/powder-coating-process.component.html
@@ -64,7 +64,7 @@
     </form>
   </div>
   <div class="add-process-btn">
-    <button class="btn btn-primary" routerLink="/powder-coating-process/create">
+    <button class="btn btn-primary mb-2" routerLink="/powder-coating-process/create">
       <i class="fas fa-plus"></i> Add New Process
     </button>
   </div>
