--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -33,7 +33,7 @@
     </form>
   </div>
 
-  <button class="btn btn-primary" (click)="openCreateDialog()">
+  <button class="btn btn-primary mb-2" (click)="openCreateDialog()">
     <i class="fas fa-plus"></i> Create Product
   </button>
 
