--- a/src/app/components/quotation/quotation.component.scss
+++ b/src/app/components/quotation/quotation.component.scss
@@ -1,4 +1,4 @@
-.purchase-container {
+.quotation-container {
     padding: 2rem;
     position: relative;
     min-height: 200px;
@@ -86,7 +86,7 @@
       }
     }
   
-    .purchases-list {
+    .quotations-list {
       .table-responsive {
         overflow-x: auto;
       }
@@ -126,10 +126,10 @@
         }
       }
     }
-}
+  }
   
   @media (max-width: 768px) {
-    .purchase-container {
+    .quotation-container {
       padding: 1rem;
   
       .search-controls {
@@ -284,9 +284,8 @@
     .btn-icon.refresh {
       background-color: var(--background);
       color: white;
-      margin-top: 3px;
       width: 42px;
-      height: 42px;
+      height: 35px;
       border-radius: 6px;
       transition: all 0.2s ease;
   
