--- a/src/app/components/shared/header/header.component.scss
+++ b/src/app/components/shared/header/header.component.scss
@@ -9,10 +9,10 @@
   .nav-container {
     max-width: 1400px;
     margin: 0 auto;
-    padding: 0 1rem;
+    padding: 5px 1rem;
 
     .nav-top {
-      display: flex;
+      display: none;
       justify-content: space-between;
       align-items: center;
       padding: 1rem 0;
@@ -142,6 +142,7 @@
 
   @media (max-width: 1024px) {
     .nav-container {
+      padding: 0px auto;
       .nav-links {
         gap: 0.25rem;
 
@@ -160,6 +161,7 @@
   @media (max-width: 768px) {
     .nav-container {
       .nav-top {
+        display: block;
         .mobile-menu-toggle {
           display: block;
           background: transparent;
