--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -20,7 +20,7 @@
           <ul class="dropdown-menu" [class.show]="showMasterMenu">
             <li><a routerLink="/category" routerLinkActive="active">Category</a></li>
             <li><a routerLink="/product" routerLinkActive="active">Product</a></li>
-            <li><a routerLink="/customer" routerLinkActive="active">Party Payment</a></li>
+            <li><a routerLink="/customer" routerLinkActive="active">Customer</a></li>
             <li><a routerLink="/employee" routerLinkActive="active">Employee</a></li>
           </ul>
         </li>
@@ -33,15 +33,12 @@
           <ul class="dropdown-menu" [class.show]="showTransactionMenu">
             <li><a routerLink="/purchase" routerLinkActive="active">Purchase</a></li>
             <li><a routerLink="/sale" routerLinkActive="active">Sale</a></li>
-            <li><a routerLink="/profit" routerLinkActive="active">Product Wise Profit</a></li>
-            <li><a routerLink="/daily-profit" routerLinkActive="active">Daily Profit</a></li>
-            <li><a routerLink="/quotation" routerLinkActive="active">Quotation</a></li>
           </ul>
         </li>
         
-        <li><a routerLink="/powder-coating-process" routerLinkActive="active">Coating</a></li>
+        <li><a routerLink="/quotation" routerLinkActive="active">Quotation</a></li>
         <li><a routerLink="/attendance" routerLinkActive="active">Attendance</a></li>
-        <li><a routerLink="/employee-order" routerLinkActive="active">Employee Order</a></li>
+        <!-- <li><a routerLink="/employee-order" routerLinkActive="active">Employee Order</a></li> -->
       </ul>
 
       <div class="nav-actions">
