--- a/src/app/components/add-purchase/add-purchase.component.scss
+++ b/src/app/components/add-purchase/add-purchase.component.scss
@@ -66,6 +66,7 @@
   border-radius: var(--border-radius);
   padding: 1.5rem;
   margin-top: 2rem;
+  border: 1px solid var(--primary);
 
   .products-header {
     display: flex;
