--- a/src/app/components/all-quotation/add-quotation/add-quotation.component.scss
+++ b/src/app/components/all-quotation/add-quotation/add-quotation.component.scss
@@ -1,6 +1,6 @@
 .add-quotation-container {
     padding: 2rem;
-    max-width: 1400px;
+    // max-width: 1400px; 
     margin: 0 auto;
   
     @media (max-width: 768px) {
@@ -66,6 +66,7 @@
     border-radius: var(--border-radius);
     padding: 1.5rem;
     margin-top: 2rem;
+    border: 1px solid var(--primary);
   
     .products-header {
       display: flex;
