--- a/src/app/components/all-quotation/quotation/quotation.component.html
+++ b/src/app/components/all-quotation/quotation/quotation.component.html
@@ -34,6 +34,20 @@
               </button>
             </div>
           </div>
+          
+          <div class="form-group">
+            <div class="product-select-group">
+              <app-searchable-select
+                formControlName="status"
+                [options]="statusOptions"
+                labelKey="label"
+                valueKey="value"
+                [defaultOption]="{ label: 'All Status', value: '' }"
+                [searchPlaceholder]="'Search status...'"
+              ></app-searchable-select>
+            </div>
+          </div>
+          
           <div class="form-group">
             <input 
               type="date" 
@@ -73,18 +87,34 @@
               <th>Invoice No.</th>
               <th>Customer Name</th>
               <th>Quotation Date</th>
+              <th>Valid Until</th>
               <th>Total Quotation Amount</th>
+              <th>Status</th>
               <th>Actions</th>
             </tr>
           </thead>
           <tbody>
             <tr *ngFor="let quotation of quotations; let index = index">
               <td>{{ startIndex + index + 1 }}</td>
-              <td>{{ quotation.invoiceNumber }}</td>
+              <td>{{ quotation.quoteNumber }}</td>
               <td>{{ quotation.customerName }}</td>
-              <td>{{ quotation.quotationDate |  date:'dd-MM-yyyy' }}</td>
-              <td>{{ quotation.totalQuotationAmount  }}</td>
+              <td>{{ quotation.quoteDate |  date:'dd-MM-yyyy' }}</td>
+              <td>{{ quotation.validUntil |  date:'dd-MM-yyyy' }}</td>
+              <td>{{ quotation.totalAmount | currency:'INR' }}</td>
+              <td>
+                <span class="status-badge" [ngClass]="getStatusClass(quotation.status)">
+                  {{ getStatusLabel(quotation.status) }}
+                </span>
+              </td>
               <td class="actions">
+                <button 
+                  class="btn-icon print" 
+                  (click)="generatePdf(quotation.id!, quotation)"
+                  title="Print quotation"
+                  [disabled]="quotation.isPrinting"
+                >
+                  <i class="fas" [ngClass]="quotation.isPrinting ? 'fa-spinner fa-spin' : 'fa-print'"></i>
+                </button>
                 <button 
                   class="btn-icon delete" 
                   (click)="deleteQuotation(quotation.id!)"
